--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -180,6 +180,32 @@ range {
     // }
 }
 
+project-selector {
+  .project-tag {
+    @import "bootstrap/scss/variables";
+    @import "bootstrap/scss/mixins/border-radius";
+    border: $border-width solid;
+    border-color: $brand-primary;
+    @include border-radius($border-radius-sm);
+
+    display: inline-block;
+    padding: .25em .4em;
+    font-size: 75%;
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .dropdown {
+    width: 200px;
+  }
+
+  .scrollable-menu {
+     height: auto;
+     max-height: 200px;
+     overflow-x: hidden;
+  }
+}
+
 .loader { }
 .loader,
 .loader:before,
