--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,275 +1,107 @@
 $topnav-background-color: #222;
 
-#toggle-sidebar {
-    position: fixed;
-    top: 0px;
-    left: 5px;
-    color: #FFF;
-    background: #222;
-    font-size: 23px;
-    z-index: 3;
-    display: none;
+@import "bootstrap/scss/bootstrap";
+@import "font-awesome/scss/font-awesome";
+@import "nvd3/build/nv.d3";
+
+@import "./loader";
+@import "./topnav";
+@import "./sidebar";
+
+.main-container {
+  margin: 50px 0 0 225px;
+  padding: 10px;
+  position: relative;
 }
+
+/* #toggle-sidebar { */
+/*     position: fixed; */
+/*     top: 0px; */
+/*     left: 5px; */
+/*     color: #FFF; */
+/*     background: #222; */
+/*     font-size: 23px; */
+/*     z-index: 3; */
+/*     display: none; */
+/* } */
 
 .btn:focus {
-    outline: 3px auto #FFF;
+  outline: 3px auto #FFF;
 }
 
-.topnav {
-    border-radius: 0;
-    background-color: $topnav-background-color;
-    padding: 6px;
-    z-index: 2;
-    .text-center {
-        text-align: center;
-        padding-left: 0;
-        cursor: pointer;
-    }
-    .top-right-nav {
-        .dropdown-menu {
-            top: 40px;
-            right: -5px;
-            left: auto;
-            hr {
-                margin-top: 1px;
-                margin-bottom: 4px;
-            }
-        }
-    }
-}
 
 a:hover {
-    text-decoration: none;
-}
-
-.sidebar {
-    border-radius: 0;
-    position: fixed;
-    z-index: 3;
-    top: 50px;
-    left: 225px;
-    width: 225px;
-    margin-left: -225px;
-    border: none;
-    border-radius: 0;
-    overflow-y: auto;
-    background-color: $topnav-background-color;
-    bottom: 0;
-    overflow-x: hidden;
-    padding-bottom: 40px;
-    -webkit-transition: all 0.2s ease-in-out;
-       -moz-transition: all 0.2s ease-in-out;
-        -ms-transition: all 0.2s ease-in-out;
-         -o-transition: all 0.2s ease-in-out;
-            transition: all 0.2s ease-in-out;
-
-    .list-group {
-        a.list-group-item {
-            background: $topnav-background-color;
-            border: 0;
-            border-radius: 0;
-            color: #999;
-            text-decoration: none;
-        }
-        a:hover {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
-        }
-        a.active {
-            background: darken($topnav-background-color, 5%);
-            color: #fff;
-        }
-    }
-
-    .sidebar-dropdown {
-        *:focus {
-            border-radius: none;
-            border: none;
-        }
-        .panel-title {
-            font-size: 1rem;
-            height: 50px;
-            margin-bottom: 0;
-            a {
-                color: #999;
-                text-decoration: none;
-                font-weight: 400;
-                background: $topnav-background-color;
-                span {
-                    position: relative;
-                    display: block;
-                    padding: .75rem 1.5rem;
-                    padding-top: 1rem;
-                }
-            }
-            a:hover, a:focus {
-                color: #fff;
-                outline: none;
-                outline-offset: -2px;
-            }
-        }
-
-        .panel-title:hover {
-            background: darken($topnav-background-color, 5%);
-        }
-
-        .panel-collapse {
-            border-radious: 0;
-            border: none;
-            .panel-body {
-                .list-group-item {
-                    border-radius: 0;
-                    background-color: $topnav-background-color;
-                    border: 0 solid transparent;
-                    a {
-                        color: #999;
-                    }
-                    a:hover {
-                        color: #FFF;
-                    }
-                }
-                .list-group-item:hover {
-                    background: darken($topnav-background-color, 5%);
-                }
-            }
-        }
-    }
+  text-decoration: none;
 }
 
 .bg-white {
-    background: #fff;
+  background: #fff;
 }
 
 .btn-xs {
-    @import "bootstrap/scss/variables";
-    @import "bootstrap/scss/mixins";
-    @import "bootstrap/scss/buttons";
+  $btn-padding-x-xs: .3rem !default;
+  $btn-padding-y-xs: .15rem !default;
+  $font-size-xs: .475rem !default;
+  $border-radius-xs: .1rem !default;
+  $btn-border-radius-xs: $border-radius-xs !default;
 
-    $btn-padding-x-xs: .3rem !default;
-    $btn-padding-y-xs: .15rem !default;
-    $font-size-xs: .475rem !default;
-    $border-radius-xs: .1rem !default;
-    $btn-border-radius-xs: $border-radius-xs !default;
-
-  // line-height: ensure proper height of button next to small input
-    @include button-size($btn-padding-y-xs, $btn-padding-x-xs, $font-size-xs, $btn-border-radius-xs);
+  @include button-size($btn-padding-y-xs, $btn-padding-x-xs, $font-size-xs, $btn-border-radius-xs);
 }
 
-.main-container {
-    margin: 50px 0 0 225px;
-    padding: 10px;
-    // -ms-overflow-x: hidden;
-    //    overflow-x: hidden;
-    position: relative;
-    z-index: 1;
-}
 
-range {
-    // .popover {
-    //     width: 500px;
-    //     max-width: 700px;
-    // }
+// From http://stackoverflow.com/questions/26638215/how-to-replace-glyphicons-with-fontawesome-in-bootstrap-3-without-changing-html
+.glyphicon {
+  @extend .fa;
 
-    // datepicker {
-    //     daypicker {
-    //         .btn {
-    //             max-width: 50%;
-    //             font-size: 50%;
-    //         }
-    //     }
-    // }
-}
-
-project-selector {
-  .project-tag {
-    @import "bootstrap/scss/variables";
-    @import "bootstrap/scss/mixins/border-radius";
-    border: $border-width solid;
-    border-color: $brand-primary;
-    @include border-radius($border-radius-sm);
-
-    display: inline-block;
-    padding: .25em .4em;
-    font-size: 75%;
-    text-align: center;
-    white-space: nowrap;
+  &.glyphicon-chevron-left {
+    @extend .fa-chevron-left;
   }
 
-  .dropdown {
-    width: 200px;
-  }
-
-  .scrollable-menu {
-     height: auto;
-     max-height: 200px;
-     overflow-x: hidden;
+  &.glyphicon-chevron-right {
+    @extend .fa-chevron-right;
   }
 }
 
-.loader { }
-.loader,
-.loader:before,
-.loader:after {
-    border-radius: 50%;
-}
-.loader:before,
-.loader:after {
-    position: absolute;
-    content: '';
-}
-.loader:before {
-    width: 5.2em;
-    height: 10.2em;
-    background: #FFFFFF;
-    border-radius: 10.2em 0 0 10.2em;
-    top: -0.1em;
-    left: -0.1em;
-    -webkit-transform-origin: 5.2em 5.1em;
-            transform-origin: 5.2em 5.1em;
-    -webkit-animation: load2 2s infinite ease 1.5s;
-            animation: load2 2s infinite ease 1.5s;
-}
-.loader {
-  font-size: 11px;
-  text-indent: -99999em;
-  margin: 20% auto;
-  position: relative;
-  width: 10em;
-  height: 10em;
-  box-shadow: inset 0 0 0 1em #222222;
-  -webkit-transform: translateZ(0);
-      -ms-transform: translateZ(0);
-          transform: translateZ(0);
-}
-.loader:after {
-  width: 5.2em;
-  height: 10.2em;
-  background: #FFFFFF;
-  border-radius: 0 10.2em 10.2em 0;
-  top: -0.1em;
-  left: 5.1em;
-  -webkit-transform-origin: 0px 5.1em;
-          transform-origin: 0px 5.1em;
-  -webkit-animation: load2 2s infinite ease;
-          animation: load2 2s infinite ease;
-}
-@-webkit-keyframes load2 {
-    0% {
-        -webkit-transform: rotate(0deg);
-                transform: rotate(0deg);
+daterange-selector {
+  datepicker {
+    z-index: $zindex-popover;
+
+    yearpicker,
+    monthpicker,
+    daypicker {
+      .btn {
+        font-size: 70%;
+      }
     }
-    100% {
-        -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-    }
+  }
+
+  .popover, popover-content {
+    z-index: $zindex-popover;
+  }
 }
-@keyframes load2 {
-    0% {
-        -webkit-transform: rotate(0deg);
-                transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-    }
-}
+
+/* project-selector { */
+/*   .project-tag { */
+/*     @import "bootstrap/scss/variables"; */
+/*     @import "bootstrap/scss/mixins/border-radius"; */
+/*     border: $border-width solid; */
+/*     border-color: $brand-primary; */
+/*     @include border-radius($border-radius-sm); */
+
+/*     display: inline-block; */
+/*     padding: .25em .4em; */
+/*     font-size: 75%; */
+/*     text-align: center; */
+/*     white-space: nowrap; */
+/*   } */
+
+/*   .dropdown { */
+/*     width: 200px; */
+/*   } */
+
+/*   .scrollable-menu { */
+/*      height: auto; */
+/*      max-height: 200px; */
+/*      overflow-x: hidden; */
+/*   } */
+/* } */
