Fix Metric selector
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/components/metric-selector.component.pug
+++ b/src/app/components/metric-selector.component.pug
@@ -1,5 +1,5 @@
 .form-inline.form-group
-  label(for="metric_button_group") Metric:
+  label(for="metric_button_group", *ngIf="label") {{ label }}
   .btn-group#metric_button_group
     button.btn.btn-secondary.btn-xs(type="button", *ngFor="let m of metrics", [class.active]="is_selected(m)", (click)="metric_selected(m)")
-      | {{ m.name }}
+      | {{ m.label }}
