--- a/src/app/accounting/accounting-home.component.pug
+++ b/src/app/accounting/accounting-home.component.pug
@@ -1,6 +1,17 @@
-h4 Overview over last 7 days #[small (sorted by total usage)]
+h4 Hourly overview over last 7 days
 
 metric-selector((selection_changed)="metric_selected($event)", label="Metric:")
+
+h5 Overall usage
+
+.container-fluid
+  .row
+    .col-md-12
+      .card
+        .card-block(style="padding: 0;")
+          aggregate-graph([overall]="true", [metric]="metric", [period]="3600", [daterange]="daterange", [granularity]="3600")
+
+h5 Projects sorted by total usage
 
 .container-fluid
   .row(*ngFor="let r of gridded_projects")
