Add Dashboard component and refactor routes
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/dashboard.component.pug
+++ b/src/app/dashboard.component.pug
@@ -1,16 +1,12 @@
 nav.navbar.navbar-dark.bg-inverse.navbar-fixed-top.topnav
   .collapse.navbar-toggleable-xs.clearfix.text-center
-    a.navbar-brand(routerLink="home") Home
+    a.navbar-brand(routerLink="/") Home
 
     // ul.nav.navbar-nav.top-nav.navbar-right.pull-xs-right.top-right-nav
     //   li
 
 nav.sidebar
   ul.list-group
-    a.list-group-item(routerLink="home", routerLinkActive="active")
-      i.fa.fa-fw.fa-home
-      | Home
-
     a.list-group-item(routerLink="accounting", routerLinkActive="active")
       i.fa.fa-fw.fa-area-chart
       | Accounting
