--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,7 @@ $topnav-background-color: #222;
 @import "./loader";
 @import "./topnav";
 @import "./sidebar";
+@import "./login";
 
 .main-container {
   margin: 50px 0 0 225px;
