--- a/src/app/accounting/accounting-home.component.pug
+++ b/src/app/accounting/accounting-home.component.pug
@@ -9,7 +9,7 @@ h5 Overall usage
     .col-md-12
       .card
         .card-block(style="padding: 0;")
-          aggregate-graph([overall]="true", [metric]="metric", [period]="3600", [daterange]="daterange", [granularity]="3600")
+          aggregate-graph([type]="GraphTypes.OVERALL", [metric]="metric", [period]="3600", [daterange]="daterange", [granularity]="3600")
 
 h5 Projects sorted by total usage
 
