--- a/src/app/components/project-selector.component.pug
+++ b/src/app/components/project-selector.component.pug
@@ -1,34 +1,35 @@
-.container-fluid
-  .row
-    .col-md-3
-      div(dropdown, autoClose="outsideClick")
-        .input-group.input-group-sm(dropdownToggle, [addToggleClass]="false")
-          span.input-group-addon
-            i.fa.fa-search
-          input.form-control(type="text", placeholder="Select projects...", [(ngModel)]="search_text")
-          span.input-group-btn(*ngIf="search_text")
-            button.btn.btn-default.close(type="button", (click)="clear_search()")
-              i.fa.fa-fw.fa-times
+.form-inline
+  .form-group
+    label(for="projects_group", *ngIf="label") {{ label }}
 
-        div(dropdownMenu, role="menu")
-          button.dropdown-item(role="menuitem", (click)="select_all()")
-            span.fa.fa-fw.fa-check
-            | Select All
+    .input-group#projects_group(dropdown, autoClose="outsideClick")
+      .input-group.input-group-sm(dropdownToggle, [addToggleClass]="false")
+        span.input-group-addon
+          i.fa.fa-search
+        input.form-control(type="text", placeholder="Select projects...", [(ngModel)]="search_text")
+        span.input-group-btn(*ngIf="search_text")
+          button.btn.btn-default.close(type="button", (click)="clear_search()")
+            i.fa.fa-fw.fa-times
 
-          button.dropdown-item(role="menuitem", (click)="unselect_all()")
-            span.fa.fa-fw.fa-times
-            | Unselect All
+      div(dropdownMenu, role="menu")
+        button.dropdown-item(role="menuitem", (click)="select_all()")
+          span.fa.fa-fw.fa-check
+          | Select All
 
-          .dropdown-divider
+        button.dropdown-item(role="menuitem", (click)="unselect_all()")
+          span.fa.fa-fw.fa-times
+          | Unselect All
 
-          .scrollable-menu
-            button.dropdown-item(*ngFor="let p of searched_projects", role="menuitem", (click)="toggle_selected(p)")
-              span.fa.fa-fw([class.fa-check]="is_selected(p)")
-              | {{ p.name }}
+        .dropdown-divider
 
-    .col-md-9
-      p No project selected
-      span.project-tag(*ngFor="let p of selected_projects")
-        | {{ p.name }}
-        button.close.btn-xs(type="button", (click)="toggle_selected(p)")
-          span.fa.fa-fw.fa-border.fa-times
+        .scrollable-menu
+          button.dropdown-item(*ngFor="let p of searched_projects", role="menuitem", (click)="toggle_selected(p)")
+            span.fa.fa-fw([class.fa-check]="is_selected(p)")
+            | {{ p.name }}
+
+  div
+    p(*ngIf="!selected_projects.length") No project selected
+    span.project-tag(*ngFor="let p of selected_projects")
+      | {{ p.name }}
+      button.close.btn-xs(type="button", (click)="toggle_selected(p)")
+        span.fa.fa-fw.fa-border.fa-times
