--- a/src/app/components/aggregate-graph.component.pug
+++ b/src/app/components/aggregate-graph.component.pug
@@ -1,18 +1,23 @@
 div
   nvd3([options]="options", [data]="data")
 
-  p Total value from {{ daterange?.start | date: 'y-MM-dd HH:mm Z' }} to {{ daterange?.end | date: 'y-MM-dd HH:mm Z' }} is: #[strong {{ values_sum/3600 | number: '1.2-2'}}] hours.
-
 table.table.table-bordered(*ngIf="show_table")
   thead
     th(style="width: 10%;") #
     th(style="width: 40%;") From
     th(style="width: 40%;") To
-    th(style="width: 20%;") Value [hours]
+    th(*ngFor="let p of projects", style="width: 20%;") {{ p.name }} [hours]
   tbody
-    tr(*ngFor="let s of values; let i = index")
-      th(scope="row") {{ i }}
+    tr
+      td(scope="row") Total
+      td {{ daterange?.start | date: 'y-MM-dd HH:mm Z' }}
+      td {{ daterange?.end | date: 'y-MM-dd HH:mm Z' }}
+      td(*ngFor="let p of projects")
+        | {{ values_sum(p.id)/3600 | number: '1.2-2' }}
+    tr(*ngFor="let s of table_values; let i = index")
+      td(scope="row") {{ i }}
       td {{ s.from | date: 'y-MM-dd HH:mm Z' }}
       td {{ s.to | date: 'y-MM-dd HH:mm Z' }}
-      td {{ s.sum/3600 | number: '1.2-2' }}
+      td(*ngFor="let p of projects")
+        | {{ s.sum[p.id]/3600 | number: '1.2-2' }}
 
