--- a/src/app/accounting/components/granularity-selector.component.pug
+++ b/src/app/accounting/components/granularity-selector.component.pug
@@ -1,5 +1,5 @@
 .form-inline.form-group
   label(for="granularity_button_group", *ngIf="label") {{ label }}
   .btn-group#granularity_button_group
-    button.btn.btn-secondary.btn-xs(type="button", *ngFor="let g of granularities", [class.active]="is_selected(g)", (click)="granularity_selected(g)")
-      | {{ g.label }}
+    button.btn.btn-secondary.btn-xs(type="button", *ngFor="let r of presets", [class.active]="is_selected(r)", (click)="preset_clicked(r)")
+      | {{ r.label }}
