Report usage ratios in aggregate table
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/accounting/accounting.component.pug
+++ b/src/app/accounting/accounting.component.pug
@@ -21,7 +21,7 @@ h4 Accounting
     .row
       .card
         .card-header
-          h5 Totals from {{ daterange?.start | date: 'y-MM-dd HH:mm Z' }} to {{ daterange?.end | date: 'y-MM-dd HH:mm Z' }}
+          h5 Aggregates from {{ daterange?.start | date: 'y-MM-dd HH:mm Z' }} to {{ daterange?.end | date: 'y-MM-dd HH:mm Z' }}
 
         .card-block
           aggregate-table
