Keep overall data separated from projects' data
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/accounting/accounting.component.pug
+++ b/src/app/accounting/accounting.component.pug
@@ -9,14 +9,14 @@ h4 Accounting
   .row
     daterange-selector
 
+  // .row
+  //   project-selector
+
   aggregate
     .row
       .card
         .card-block(style="padding: 0;")
           aggregate-graph
-
-        .card-footer
-          aggregate-download
 
     .row
       .card
