Improve table layout
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/accounting/components/aggregate-table.component.pug
+++ b/src/app/accounting/components/aggregate-table.component.pug
@@ -1,31 +1,31 @@
-table.table.table-bordered
-  thead
+table.table.table-bordered.table-hover
+  thead.thead-inverse
     th
       | Project
       .btn-group.pull-right
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('project.name', true)", [ngClass]="{'active': is_sorting('project.name', true)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('project.name', true)", [class.active]="is_sorting('project.name', true)")
           i.fa.fa-chevron-down
 
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('project.name', false)", [ngClass]="{'active': is_sorting('project.name', false)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('project.name', false)", [class.active]="is_sorting('project.name', false)")
           i.fa.fa-chevron-up
 
     th
       | Sum [hours]
       .btn-group.pull-right
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('value', true)", [ngClass]="{'active': is_sorting('value', true)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('value', true)", [class.active]="is_sorting('value', true)")
           i.fa.fa-chevron-down
 
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('value', false)", [ngClass]="{'active': is_sorting('value', false)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('value', false)", [class.active]="is_sorting('value', false)")
           i.fa.fa-chevron-up
 
 
     th
       | Ratio
       .btn-group.pull-right
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('percent', true)", [ngClass]="{'active': is_sorting('percent', true)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('percent', true)", [class.active]="is_sorting('percent', true)")
           i.fa.fa-chevron-down
 
-        button.btn.btn-outline-primary.btn-xs(type="button", (click)="sort('percent', false)", [ngClass]="{'active': is_sorting('percent', false)}")
+        button.btn.btn-secondary.btn-xs(type="button", (click)="sort('percent', false)", [class.active]="is_sorting('percent', false)")
           i.fa.fa-chevron-up
 
   tbody
