Rename frontend -> dashboard
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/accounting/accounting.component.pug
+++ b/src/app/accounting/accounting.component.pug
@@ -1,5 +1,5 @@
 //-
-//- caos-frontend - CAOS frontend
+//- caos-dashboard - CAOS dashboard
 //-
 //- Copyright © 2016 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
 //-
