--- a/src/app/accounting/components/project-selector.component.pug
+++ b/src/app/accounting/components/project-selector.component.pug
@@ -1,5 +1,5 @@
 //-
-//- caos-frontend - CAOS frontend
+//- caos-dashboard - CAOS dashboard
 //-
 //- Copyright © 2016 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
 //-
