--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -1,5 +1,5 @@
 //-
-//- caos-frontend - CAOS frontend
+//- caos-dashboard - CAOS dashboard
 //-
 //- Copyright © 2016 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
 //-
