Rework daterange selector
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -91,6 +91,13 @@ daterange-selector {
   datepicker {
     z-index: $zindex-popover;
 
+    datepicker-inner {
+      .card {
+        //min-width: 100%;
+        max-width: none;
+      }
+    }
+
     yearpicker,
     monthpicker,
     daypicker {
@@ -102,6 +109,7 @@ daterange-selector {
 
   .popover, .popover-content {
     z-index: $zindex-popover;
+    max-width: none;
   }
 }
 
