--- a/src/app/accounting/components/daterange-selector.component.pug
+++ b/src/app/accounting/components/daterange-selector.component.pug
@@ -21,40 +21,58 @@
 
 .form-inline
   .form-group
-    label(for="daterange_start_group") From
-    .btn-group#daterange_start_group
-      popover-content(#popoverstart, placement="bottom", [closeOnClickOutside]="true", (click)="$event.stopPropagation();")
-        datepicker([(ngModel)]="daterange_start", [showWeeks]="false", [startingDay]="1")
+    label Date range: {{ global_daterange.start | date: 'dd/MM/y HH:mm' }} -- {{ global_daterange.end | date: 'dd/MM/y HH:mm' }} ({{ global_daterange_label }})
+    button.btn.btn-secondary.btn-sm(type="button", [popover]="daterange_popover")
+      | Change
+      i.fa.fa-fw.fa-calendar
 
-        .form-inline
-          .form-group
-            label(for="daterange_starttime_group") Time: {{ preview_start_hour | number: '2.0-0' }}:00
-          .input-group#daterange_starttime_group
-            input(type="range", min=0, max=23, step=1, #start_hour, (change)="change_start_hour(start_hour.value)", [(ngModel)]="preview_start_hour")
+popover-content(#daterange_popover, placement="auto bottom", (click)="$event.stopPropagation();")
+  div
+    .row
+      .col-md-12.text-md-center
+        h5
+          | {{ daterange.start | date: 'dd/MM/y HH:mm' }} -- {{ daterange.end | date: 'dd/MM/y HH:mm' }}
+          .btn-group.pull-right
+            button.btn.btn-primary(type="button", (click)="ok_clicked(); daterange_popover.hide()") OK
+            button.btn.btn-secondary(type="button", (click)="cancel_clicked(); daterange_popover.hide()") Cancel
 
-      button.btn.btn-secondary.btn-xs(type="button", [popover]="popoverstart")
-        | {{ daterange_start | date: 'dd/MM/y HH:mm' }}
-        i.fa.fa-fw.fa-calendar
+    hr
 
+    .row
+      .col-xs-3
+        .btn-group-vertical
+          button.btn.btn-secondary.btn-sm(type="button", *ngFor="let r of presets", [class.active]="is_selected(r)",  [class.btn-primary]="is_global_selected(r)", (click)="preset_clicked(r)")
+            | {{ r.label }}
 
-    label(for="daterange_end_group") to
-    .btn-group#daterange_end_group
-      popover-content(#popoverend, placement="bottom", [closeOnClickOutside]="true", (click)="$event.stopPropagation();")
-        datepicker([(ngModel)]="daterange_end", [showWeeks]="false", [startingDay]="1")
+      .col-xs-9
+        div
+         .row
+          .col-xs-6
+            .row
+              .col-xs-12.text-xs-center
+                h5 Start
 
-        .form-inline
-          .form-group
-            label(for="daterange_endtime_group") Time: {{ preview_end_hour | number: '2.0-0' }}:00
-          .input-group#daterange_endtime_group
-            input(type="range", min=0, max=23, step=1, #end_hour, (change)="change_end_hour(end_hour.value)", [(ngModel)]="preview_end_hour")
+            .row
+              .col-xs-12
+                label <b>Date:</b> {{ start_date | date: 'dd/MM/yy' }}
+                datepicker([(ngModel)]="start_date", [showWeeks]="false", [startingDay]="1")
+                .form-inline
+                  .form-group
+                    label(for="daterange_starttime_group") <b>Time:</b> {{ start_time/60 | number: '2.0-0' }}:00
+                    .input-group#daterange_starttime_group
+                      input(type="range", min=0, max=1439, step=60, [(ngModel)]="start_time")
 
-      button.btn.btn-secondary.btn-xs(type="button", [popover]="popoverend")
-        | {{ daterange_end | date: 'dd/MM/y HH:mm' }}
-        i.fa.fa-fw.fa-calendar
+          .col-xs-6
+            .row
+              .col-xs-12.text-xs-center
+                h5 End
 
-  .form-group
-    label(for="daterange_preset_button_group") or past
-    .btn-group#daterange_preset_button_group
-      button.btn.btn-secondary.btn-xs(type="button", *ngFor="let r of presets", [class.active]="is_selected(r)", (click)="preset_clicked(r)")
-        | {{ r.label }}
-
+            .row
+              .col-xs-12
+                label <b>Date:</b> {{ end_date | date: 'dd/MM/yy' }}
+                datepicker([(ngModel)]="end_date", [showWeeks]="false", [startingDay]="1")
+                .form-inline
+                  .form-group
+                    label(for="daterange_endtime_group") <b>Time:</b> {{ end_time/60 | number: '2.0-0' }}:00
+                    .input-group#daterange_endtime_group
+                      input(type="range", min=0, max=1439, step=60, [(ngModel)]="end_time")
