--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -31,6 +31,7 @@ $topnav-background-color: #222;
 @import "./topnav";
 @import "./sidebar";
 @import "./login";
+@import "./range";
 
 .main-container {
   margin: 50px 0 0 225px;
